[metadata]
name = writedown
version = 0.1.0
description = The official Writedown parser and CLI.
author = Clifford Oravec

[options]
packages = find: # OR `find_namespaces:` if you want to use namespaces

[options.packages.find]
include=writedown*
exclude=writedown.tests*

[options.entry_points]
console_scripts =
    cli-name = writedown.cli:main